ajustes no cadastro de lote

--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -42,6 +42,14 @@
     font-size: 12px;
     color: #353535;
   }
+  .dropdown-content {
+    position: relative !important;
+    label[aria-selected="true"] {
+      font-weight: bold !important;
+      color: white !important;
+      background-color: #109cf1 !important;
+    }
+  }
 }
 
 .modal-cadastro-lote {
@@ -72,7 +80,7 @@ table.cadastro {
     }
   }
 
-  th {
+  th, tr:last-child {
     font-weight: 600;
     font-size: 14px;
     letter-spacing: 0.01em;
@@ -83,6 +91,11 @@ table.cadastro {
       padding-left: 20px;
     }
   }
+  tr:last-child {
+    td {
+      padding-bottom: 50px;
+    }
+  }
   td {
     font-size: 14px;
     color: #707683;
@@ -91,14 +104,14 @@ table.cadastro {
     i {
       position: absolute;
       padding-left: 10%;
-      color: #C8C8C8;
+      color: #c8c8c8;
     }
     &:first-child {
       padding-left: 20px;
       width: 50%;
       font-weight: bold;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       width: 19%;
     }
 
@@ -134,16 +147,16 @@ table.cadastro {
       }
       &:first-child {
         padding-left: 20px;
+        &.blueish {
+          color: #035d96;
+        }
       }
       &.last-item {
         padding-bottom: 30px;
       }
     }
-
   }
 }
-
-
 
 .button-action {
   display: flex;
@@ -151,17 +164,17 @@ table.cadastro {
   align-items: flex-end;
 }
 
-.lotes_container{
+.lotes_container {
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
   padding: 0 15px 10px 15px;
 
-  .drop-down-lotes{
+  .drop-down-lotes {
     width: 50%;
     padding-right: 15px;
   }
-  .select-lotes{
+  .select-lotes {
     width: 50%;
     padding-left: 15px;
   }
@@ -246,17 +259,16 @@ table.cadastro-empresa {
       color: #000;
     }
   }
-  tr{
+  tr {
     td.container-detalhe {
       background: #f2fbfe;
       padding: 15px 20px 15px 0px;
       div.container-info {
         display: grid;
-        grid-template-columns:  46% 54%; 
-        grid-template-rows: 20% 20% 20% 20% 20%;  
+        grid-template-columns: 46% 54%;
+        grid-template-rows: 20% 20% 20% 20% 20%;
 
-             
-        div:not(:first-child):not(:nth-child(1)){
+        div:not(:first-child):not(:nth-child(1)) {
           padding: 10px 0 5px;
         }
 
@@ -265,18 +277,14 @@ table.cadastro-empresa {
           padding: 0;
         }
 
-        li{
+        li {
           font-weight: bold;
           color: #353535;
         }
       }
     }
   }
-
-  
 }
-
-
 
 .button-action {
   display: flex;
@@ -284,19 +292,18 @@ table.cadastro-empresa {
   align-items: flex-end;
 }
 
-.lotes_container{
+.lotes_container {
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
   padding: 0 15px 10px 15px;
 
-  .drop-down-lotes{
+  .drop-down-lotes {
     width: 50%;
     padding-right: 15px;
   }
-  .select-lotes{
+  .select-lotes {
     width: 50%;
     padding-left: 15px;
   }
 }
-
