--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -239,9 +239,14 @@ div.caption-choices {
 }
 
 .btn-styled {
+  font-weight: bold !important;
+  font-size: 14px !important;
   &.set-size-properties {
     min-height: 40px;
     min-width: 160px;
+  }
+  &.no-border {
+    border: none;
   }
   &.btn-primary {
     background-color: #035d96;
