--- a/src/components/UnifiedSolicitation/style.scss
+++ b/src/components/UnifiedSolicitation/style.scss
@@ -16,7 +16,6 @@
   border-radius: 4px;
 }
 
-
 table.report-table {
   width: 100%;
   text-align: center;
@@ -34,5 +33,221 @@ table.report-table {
 .label-n-alunos {
   span {
     padding-right: 10px;
+  }
+}
+
+.container-detail {
+  padding: 1.5% 2% 1% 3% !important;
+
+  .container-title {
+    display: grid;
+    grid-template-columns: 20% auto 15%;
+    grid-template-rows: auto;
+
+    .identificador {
+      background: #d9d8d8;
+      width: 90%;
+      height: 100%;
+      border: 0.5px solid #e8e8e8;
+      box-sizing: border-box;
+      border-radius: 4px;
+      display: grid;
+      grid-row: 50% 50%;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 1em;
+      line-height: 23px;
+
+      div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        color: #353535;
+      }
+    }
+
+    .titulo-descricao-top {
+      width: 431px;
+      height: 17px;
+      left: 555px;
+      top: 192px;
+
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 16px;
+      color: #a8a8a8;
+      span {
+        color: #853cb6;
+      }
+    }
+
+    .titulo-solicitante-lote {
+      div {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto;
+        margin-top: 5px;
+      }
+
+      .solicitante,
+      .lote {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        /* identical to box height */
+
+        color: #686868;
+      }
+
+      .prop-solicitante,
+      .prop-lote {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 15px;
+        line-height: 18px;
+
+        color: #353535;
+      }
+    }
+
+    .impressora {
+      display: flex;
+      justify-content: flex-end;
+
+      i {
+        font-style: normal;
+        font-weight: 900;
+        font-size: 15px;
+        line-height: 17px;
+        /* identical to box height */
+
+        color: #c8c8c8;
+      }
+    }
+  }
+  .descricao-evento {
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+    .direita,
+    .esquerda {
+      .descricao-container {
+        margin-bottom: 1em;
+      }
+      div {
+        margin: 0 0 0.5em 0;
+      }
+    }
+
+    .descricao-titulo {
+      color: #686868;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 16px;
+    }
+    .descricao-texto {
+      color: #686868;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 16px;
+    }
+  }
+
+  .header-tabela {
+    background: #333333;
+    color: #fff;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 0.875em;
+    line-height: 16px;
+
+    div {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      padding: 0.5em 0.5em 0.5em 0.5em;
+    }
+  }
+
+  .tabela-escolas {
+    display: grid;
+    grid-template-columns: 8% auto 10% 15% 15% 10%;
+    grid-auto-rows: 47px auto;
+    border-bottom: 1px solid #353535;
+    
+
+    div {
+      padding: 0.5em;
+    }
+  }
+
+  .tabela-escolas:nth-last-child(-n+1) {
+    border-bottom: 2px solid #353535;
+    margin-bottom: 1.5em;
+  }
+
+  .observacoes-solicitacao {
+    margin-top: 15px;
+    display: grid;
+    grid-template-rows: 80px 80px;
+    grid-row-gap: 10px;
+
+    .div-topo {
+      display: grid;
+      grid-template-columns: 49% 49%;
+      grid-column-gap: 2%
+    }
+
+    .kits {
+      display: flex;
+      justify-content: flex-end;
+      padding-right: 2em; 
+    }
+
+    .descricao-titulo {
+      color: #686868;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 16px;
+    }
+    .descricao-texto {
+      color: #686868;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 16px;
+      padding-top: 0.8em;
+    }
+
+    .descricao-observacao {
+      color: #686868;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 16px;
+      padding-top: 1em;
+    }
+  }
+
+  .botoes-acao {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 30px;
   }
 }
