alguns ajustes front

--- a/src/components/Shareable/CardMatriculados/style.scss
+++ b/src/components/Shareable/CardMatriculados/style.scss
@@ -4,6 +4,9 @@
     .title {
       font-size: 14px;
       color: #686868;
+      .col-5 {
+        margin-left: inherit;
+      }
     }
     .rectangle {
       font-size: 14px;
