--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -42,14 +42,6 @@
     font-size: 12px;
     color: #353535;
   }
-  .dropdown-content {
-    position: relative !important;
-    label[aria-selected="true"] {
-      font-weight: bold !important;
-      color: white !important;
-      background-color: #109cf1 !important;
-    }
-  }
 }
 
 .modal-cadastro-lote {
@@ -80,7 +72,7 @@ table.cadastro {
     }
   }
 
-  th, tr:last-child {
+  th {
     font-weight: 600;
     font-size: 14px;
     letter-spacing: 0.01em;
@@ -89,11 +81,6 @@ table.cadastro {
     padding-bottom: 10px;
     &:first-child {
       padding-left: 20px;
-    }
-  }
-  tr:last-child {
-    td {
-      padding-bottom: 50px;
     }
   }
   td {
@@ -147,9 +134,6 @@ table.cadastro {
       }
       &:first-child {
         padding-left: 20px;
-        &.blueish {
-          color: #035d96;
-        }
       }
       &.last-item {
         padding-bottom: 30px;
@@ -305,5 +289,40 @@ table.cadastro-empresa {
   .select-lotes {
     width: 50%;
     padding-left: 15px;
+  }
+}
+
+.container-fields {
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: 95% 5%;
+
+  .fields-set {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 38% 58%;
+    grid-column-gap: 4%;
+  }
+
+  .fields-set-edital {
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 52% 44%;
+    grid-column-gap: 4%;
+  }
+
+  .fields-set-edital-plus {
+    display: flex;
+    justify-content: flex-end;
+
+    div {
+      width: 44%;
+    }
+  }
+
+  .button-field {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
   }
 }
