estilizando formulario de cadastro de empresa separando os campos por sessoes (botoes e campos de editais)

--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -270,6 +270,12 @@ table.cadastro-empresa {
   }
 }
 
+.button-container{
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 20%;
+}
+
 .button-action {
   display: flex;
   justify-content: center;
