implementando a logica de submit com vigencias aninhadas

--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -423,10 +423,8 @@ section {
   .titulo {
     padding: 0 32px;
   }
-
-
 }
-.data-processo-adm{
+.data-processo-adm {
   display: grid;
   grid-template-columns: 90% 10%;
 
@@ -435,7 +433,6 @@ section {
     grid-template-columns: 68% 28%;
     grid-column-gap: 4%;
   }
-
 }
 
 .inputs-select-lote-dre {
@@ -444,36 +441,36 @@ section {
   grid-column-gap: 4%;
 }
 
-.container-lote-dre{
+.container-lote-dre {
   margin: 1.5em 0;
 }
 
-
-.section-contrato-vigencia{
+.section-contrato-vigencia {
   display: grid;
-  grid-template-columns: 95% 5%;
+  grid-template-columns: 41% 50% 3%;
+  grid-column-gap: 2%;
   margin-bottom: 1em;
 
   section {
-    .colunas{
+    .colunas {
       display: grid;
-      grid-template-columns: 38% 28% 28%;
+      grid-template-columns: 48% 48%;
       grid-column-gap: 2%;
       margin-top: 1em;
-      
-      .coluna{
+
+      .coluna {
         display: grid;
         grid-template-columns: 100%;
       }
     }
-
-    
   }
 
-  aside{
+  aside {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
   }
 }
-
+.contrato {
+  margin-top: 1em;
+}
