lista de inclusao de alimentacao pra dre aprovar funcionando

--- a/src/components/InclusaoDeAlimentacao/DRE/Relatorio/style.scss
+++ b/src/components/InclusaoDeAlimentacao/DRE/Relatorio/style.scss
@@ -1,4 +1,11 @@
+.title-message {
+  font-weight: bold;
+  color: #686868;
+  font-size: 14px;
+}
+
 table.table-periods {
+  margin-top: 20px;
   tr {
     color: #686868;
     margin-top: 20px;
