--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -59,6 +59,25 @@
   &.card-table-cadastro {
     padding: 0 !important;
   }
+
+  &.contratos-relacionados{
+
+    .excluir-form {
+      display: flex;
+      justify-content: flex-end;
+    }
+    
+    .excluir {
+      background: none;
+      color: inherit;
+      border: none;
+      padding: 0;
+      font: inherit;
+      cursor: pointer;
+      outline: inherit;
+      font-size: 12px;
+    }
+  }
 }
 
 table.cadastro {
@@ -498,17 +517,18 @@ section {
       color: #353535;
     }
 
-    .vigencias{
+    .vigencias {
       display: flex;
     }
 
-    .iteracao-elementos{
+    .iteracao-elementos {
       display: flex;
 
-      .elementos{
+      .elementos {
         margin-left: 0.5em;
       }
     }
-    
   }
 }
+
+
