--- a/src/components/screens/Cadastros/style.scss
+++ b/src/components/screens/Cadastros/style.scss
@@ -60,13 +60,12 @@
     padding: 0 !important;
   }
 
-  &.contratos-relacionados{
-
+  &.contratos-relacionados {
     .excluir-form {
       display: flex;
       justify-content: flex-end;
     }
-    
+
     .excluir {
       background: none;
       color: inherit;
@@ -531,4 +530,109 @@ section {
   }
 }
 
+table.cadastro-lote {
+  width: 100%;
+  th {
+    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0.01em;
+    color: #686868;
+    border-bottom: 2px solid #a8a8a8;
+    padding-bottom: 10px;
+    &:first-child {
+      padding-left: 20px;
+      width: 25%;
+    }
+    &:nth-child(2) {
+      width: 20%;
+    }
+    &:nth-child(3) {
+      width: 25%;
+    }
+  }
+  td {
+    font-size: 14px;
+    border-bottom: 1px #e8e8e8 solid;
+    height: 60px;
 
+    &:first-child {
+      padding-left: 20px;
+      width: 30%;
+      font-weight: bold;
+      color: #323c47;
+    }
+    &:nth-child(2) {
+      width: 25%;
+    }
+    &:nth-child(3) {
+      width: 35%;
+    }
+    padding: 0.5em;
+  }
+  .btn-acao {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+  .menu-table {
+    display: grid;
+    grid-template-columns: 67% 33%;
+  }
+
+  tr.relationed-companies {
+    background: #f2fbfe;
+    td {
+      background: #f2fbfe;
+      font-weight: bold;
+      font-size: 14px;
+      color: #353535;
+      border: none;
+      padding: 10px 0;
+      &:first-child {
+        padding: 0 20px;
+      }
+      
+    }
+  }
+
+  tr.detalhes {
+    td {
+      background-color: #f2fbfe;
+      font-weight: normal;
+      color: #353535;
+      font-size: 15px;
+      padding-right: 20px;
+      
+
+      .divisao {
+        padding-top: 10px;
+        border-bottom: 1px #e8e8e8 solid;
+      }
+
+      .detalhe-edital-contrato {
+        display: grid;
+        grid-template-rows: 1.5em 2em auto;
+        
+
+        span {
+          line-height: 14px;
+          font-weight: 600;
+        }
+      }
+
+      .header{
+        font-weight: bold;
+        color: #686868;
+      }
+
+      .contrato-detalhe {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: 30% 70%;
+
+        .nome-unidade {
+          color: #217cb2;
+        }
+      }
+    }
+  }
+}
