--- a/src/styles/sb-admin-2.css
+++ b/src/styles/sb-admin-2.css
@@ -10573,7 +10573,7 @@ a:focus {
 }
 
 #wrapper #content-wrapper {
-  background-color: #f8f9fc;
+  background-color: #f8f5f5;
   width: 100%;
   overflow-x: hidden;
 }
