--- a/src/components/Shareable/Page/style.scss
+++ b/src/components/Shareable/Page/style.scss
@@ -1,10 +1,17 @@
+@import "../../../styles/variables.scss";
+
 .breadcrumb-title {
   font-weight: bold;
   font-size: 12px;
   text-transform: uppercase;
-  color: #C8C8C8;
+  color: #c8c8c8;
 }
 
 .page-title {
-  padding-top: 3rem;
+  padding-top: 1.2rem;
+}
+
+#wrapper {
+  padding-right: 3rem;
+  background-color: $whiteBackground;
 }
