--- a/src/components/Shareable/style.scss
+++ b/src/components/Shareable/style.scss
@@ -16,19 +16,23 @@ textarea {
 .card-body {
   padding: 2rem !important;
 }
-
-input.input-search {
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: 0.5px solid #a4a4a4;
-  color: #a8a8a8;
-  text-align: right !important;
-  font-style: italic;
-  &::placeholder {
-    text-align: right;
-    color: #a8a8a8;
-    padding-right: 5px;
+.dashboard-card-title {
+  input.input-search {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 0.5px solid $grayLight;
+    color: $grayLight;
+    text-align: right !important;
+    font-style: italic;
+    &::placeholder {
+      text-align: right;
+      color: $grayLight;
+      padding-right: 5px;
+    }
+  }
+  i.fa-search {
+    font-size: 20px;
   }
 }
 
@@ -83,22 +87,22 @@ div.caption-choices {
     padding-right: 30px;
     &:nth-child(1) {
       i {
-        color: #5ec430;
+        color: $greenPanel;
       }
     }
     &:nth-child(2) {
       i {
-        color: #eb8002;
+        color: $orange;
       }
     }
     &:nth-child(3) {
       i {
-        color: #c9251b;
+        color: $red;
       }
     }
     &:nth-child(4) {
       i {
-        color: #000000;
+        color: $black;
       }
     }
   }
