--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,17 @@
 // COLORS
-$green: #198459;
-$greenHover: #00c855;
+$black: #000000;
+$blackSubtle: #333333;
 $blue: #035d96;
+$blueIcon: #334d6e;
 $blueCheckAndRadio: #007bff;
 $gray: #686868;
 $grayHeader: #929394;
+$grayLight: #a8a8a8;
+$green: #198459;
+$greenHover: #00c855;
+$greenPanel: #297805;
+$orange: #d06d12;
 $placeholder: #ced4da;
+$red: #a50e05;
+$white: #ffffff;
+$whiteBackground: #f8f5f5;
