--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,8 @@
 $black: #000000;
 $blackSubtle: #333333;
 $blue: #035d96;
+$blueButtonBackground: #064f79;
+$blueButtonFont: #086397;
 $blueIcon: #334d6e;
 $blueCheckAndRadio: #007bff;
 $gray: #686868;
