--- a/src/components/Shareable/CardHistorico/style.scss
+++ b/src/components/Shareable/CardHistorico/style.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .card-history {
   .card-header {
     padding: 0.75rem 1.25rem;
@@ -15,12 +17,19 @@
       margin-left: 20px;
       padding-top: 8px;
       padding-left: 20px;
+      font-size: 14px;
     }
     .checkbox-custom {
       margin-left: 20px;
     }
   }
-
+  table.table {
+    th {
+      font-weight: 400;
+      color: $gray;
+      font-size: 14px;
+    }
+  }
   .td-check {
     .checkbox-label,
     .checkbox-custom {
