--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $blueIcon: #334d6e;
 $blueCheckAndRadio: #007bff;
 $gray: #686868;
 $grayHeader: #929394;
+$grayIcon: #c2cfe0;
 $grayLight: #a8a8a8;
 $green: #198459;
 $greenHover: #00c855;
