--- a/src/components/screens/DashboardEscola/style.scss
+++ b/src/components/screens/DashboardEscola/style.scss
@@ -1,4 +1,5 @@
-/* hide the blue outline */
+@import "../../../styles/variables.scss";
+
 .form-control:focus {
   outline: 0 !important;
   border-color: initial;
@@ -33,6 +34,13 @@ input:-moz-placeholder {
       padding-top: 2rem;
       .form-group {
         padding: 0;
+        .fa-pen {
+          z-index: 1;
+          padding-top: 12px;
+          color: $grayIcon;
+          position: relative;
+          margin-left: -30px;
+        }
       }
     }
   }
