--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,11 +4,13 @@ $blackSubtle: #333333;
 $blue: #035d96;
 $blueButtonBackground: #064f79;
 $blueButtonFont: #086397;
-$blueIcon: #334d6e;
 $blueCheckAndRadio: #007bff;
+$blueIcon: #334d6e;
+$blueSelected: #f2fbfe;
 $gray: #686868;
 $grayHeader: #929394;
 $grayIcon: #c2cfe0;
+$grayInputBackground: #e8e8e8;
 $grayLight: #a8a8a8;
 $green: #198459;
 $greenHover: #00c855;
