removendo timeout dos sidebars; adicionando menuzinho pra trocar o menu para testes

--- a/src/components/Shareable/Sidebar/style.scss
+++ b/src/components/Shareable/Sidebar/style.scss
@@ -139,3 +139,12 @@ body {
     }
   }
 }
+
+.testing-sidebar {
+  color: white;
+  cursor: pointer;
+  font-size: 10px;
+  div:first-child {
+    margin-left: 2rem;
+  }
+}
