--- a/src/components/Shareable/Page/style.scss
+++ b/src/components/Shareable/Page/style.scss
@@ -18,9 +18,9 @@
 
 #content-wrapper {
   div.content-wrapper-div {
-    margin-left: 18rem;
+    //margin-left: 18rem;
     &.toggled {
-      margin-left: 6rem;
+      //margin-left: 6rem;
     }
   }
 }
